# BI-Copilot

./: .gitignore  QUICKSTART.md  README.md  docker-compose.yml
backend/: .env.example  create_sample_db.py  main.py  pyproject.toml  requirements.txt  test.db
backend/app/agents/: analysis_planner.py  analytics_agent.py  dashboard_generator.py  orchestrator.py  sql_generator.py
backend/app/core/: cache.py  config.py  database.py  schema.py
backend/app/routers/: chat.py
backend/app/routes/: analyze.py  health.py  schema_routes.py
backend/app/utils/: chart_mapper.py  charting.py  sql_templates.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  App.vue  index.css
frontend/src/components/: ChartComponents.css  ChartComponents.tsx  ChatInterface.vue  ChatMessage.css  ChatMessage.tsx  Dashboard.vue  DashboardRenderer.css  DashboardRenderer.tsx  ErrorBoundary.tsx  ProgressTracker.css  ProgressTracker.tsx  QueryInput.css  QueryInput.tsx  Sidebar.css  Sidebar.tsx
frontend/src/hooks/: useAnalysis.ts
