[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite==0.20.0",
    "asyncpg==0.30.0",
    "fastapi[standard]==0.115.6",
    "google-generativeai==0.8.3",
    "httpx==0.27.2",
    "langchain==0.3.16",
    "langchain-google-genai==2.0.8",
    "langchain-openai==0.2.14",
    "litellm==1.56.4",
    "numpy==2.2.2",
    "pydantic-settings==2.7.1",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.2",
    "pytest-cov==6.0.0",
    "python-dotenv==1.0.1",
    "redis[hiredis]==5.2.1",
    "sqlalchemy[asyncio]==2.0.36",
    "sqlparse==0.5.3",
    "uvicorn[standard]==0.34.0",
]
